perf : Service 성능 개선